# free

./: .gitignore  README.en.md  README.md  build.gradle  gradle.properties  local.properties  settings.gradle
app/: build.gradle  config.json  proguard-rules.pro
codestyle/: CodingRuler.java  SampleCode.java
common/library-crashhandler/: CMakeLists.txt  build.gradle
common/library-crashhandler/src/main/: AndroidManifest.xml
common/library-crashhandler/src/main/alone/: AndroidManifest.xml
common/library-crashhandler/src/main/java/android/app/servertransaction/: ClientTransaction.java
common/library-crashhandler/src/main/java/com/donews/crashhandler/: CrashInitProvider.java
common/library-crashhandler/src/main/java/com/donews/crashhandler/compat/: ActivityLifecycleV15_V20.java  ActivityLifecycleV21_V23.java  ActivityLifecycleV24_V25.java  ActivityLifecycleV26_V27.java  ActivityLifecycleV28_V30.java
common/library-crashhandler/src/main/java/com/donews/crashhandler/core/: CrashCoreHandler.java  CrashHandlerQuitException.java  IActivityLifecycleCrashHandler.java
common/library-crashhandler/src/main/java/com/donews/crashhandler/reflect/: Reflection.java  ReflectionLimit.java  ReflectionNative.java
common/library-crashhandler/src/main/java/debug/: Test2Activity.java  TestActivity.java  TestApplication.java
common/library-crashhandler/src/main/jni/cpp/: Restriction.cpp
gradle/: baseMothed.gradle  common.build.gradle  config.gradle  library.build.gradle  module.build.gradle  network.gradle
keystore/: cdyfjdd.jks  cdyfqbn.jks  ddyb.jks  debug.keystore  (+1 more)
(+2468 files in other folders)
